src/objects/Training_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Question__c</fullName>
        <label>Training Question</label>
        <referenceTo>Training_Question__c</referenceTo>
        <relationshipLabel>Training Answers</relationshipLabel>
        <relationshipName>Training_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Training Answer</label>
    <nameField>
        <displayFormat>TA-{000000}</displayFormat>
        <label>Training Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>